JPMS adjustments