@@ -43,6 +43,7 @@ if (project.sourceCompatibility.isJava11Compatible()) {
                 '--add-opens', "org.trellisldp.api/org.trellisldp.api=weld.core.impl",
                 '--add-opens', "org.trellisldp.http/org.trellisldp.http.core=weld.core.impl",
                 '--add-opens', "org.trellisldp.constraint/org.trellisldp.constraint=weld.core.impl",
+                '--add-opens', "org.trellisldp.file/org.trellisldp.file=weld.core.impl",
                 '--add-opens', "org.trellisldp.io/org.trellisldp.io=weld.core.impl"
             ]
         }
